added dependencies to work with PCL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.5.1)
 
 project(steering VERSION 1.0)
 FIND_PACKAGE(Eigen3 REQUIRED)
+FIND_PACKAGE(PCL REQUIRED COMPONENTS common)
 INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
 include(GNUInstallDirs)
 
 add_library(steering SHARED
@@ -10,6 +12,7 @@ add_library(steering SHARED
 )
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${EIGEN_LIBRARIES})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PCL_COMMON_LIBRARIES})
 
 set_target_properties(steering PROPERTIES VERSION ${PROJECT_VERSION})
 
