--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,17 @@ cmake_minimum_required(VERSION 3.5.1)
 
 project(steering VERSION 1.0)
 FIND_PACKAGE(Eigen3 REQUIRED)
-FIND_PACKAGE(PCL REQUIRED COMPONENTS common)
+FIND_PACKAGE(PCL REQUIRED COMPONENTS common filters)
 INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
 include(GNUInstallDirs)
+
+IF (NOT CMAKE_BUILD_TYPE)
+ #SET(CMAKE_BUILD_TYPE "DEBUG")
+ SET(CMAKE_BUILD_TYPE "RELEASE") 
+ENDIF (NOT CMAKE_BUILD_TYPE)
+message(STATUS "Configured to compile in ${CMAKE_BUILD_TYPE} mode.")
+
 
 add_library(steering SHARED
     src/SteeringControl.cpp
@@ -13,6 +20,8 @@ add_library(steering SHARED
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${EIGEN_LIBRARIES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PCL_COMMON_LIBRARIES})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PCL_FILTER_LIBRARY})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PCL_LIBRARIES})
 
 set_target_properties(steering PROPERTIES VERSION ${PROJECT_VERSION})
 
